# vboard

./: Cargo.toml
vboard-lib/: Cargo.toml
vboard-lib/examples/: simple.rs
vboard-lib/src/: common.rs  config.rs  launch.rs  lib.rs  msg.rs  routing.rs  state.rs  utils.rs  video.rs
vboard-lib/src/web/: mod.rs  template.rs
vboard-lib/templates/: base.html  index.html  video.html
