[package]
name = "vboard-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.54"
dashmap = "5.1.0"
flume = "0.10.11"
futures = "0.3.21"
gstreamer = "0.18.3"
gstreamer-app = "0.18.0"
log = "0.4.14"
once_cell = "1.9.0"
parking_lot = "0.12.0"
percent-encoding = "2.1.0"
tide = { version = "0.16.0", features = ["logger", "h1-server"], default-features = false }
dirs = "4.0.0"
uuid = "0.8.2"
chrono = "0.4.19"
async-once-watch = "0.1.1"
async-std = "1.10.0"
askama = "0.11.1"
askama_tide = "0.14.0"
gstreamer-video = "0.18.4"

[dev-dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
futures = "0.3.21"
